--- a/src/app/v2/components/extras/extras.component.html
+++ b/src/app/v2/components/extras/extras.component.html
@@ -106,7 +106,7 @@
     </p>
     <a
       href="#"
-      class="bg-yellow-400 text-gray-800 px-6 py-2  hover:bg-[#fbcc2c] transition duration-300"
+      class="bg-[#009C88] text-gray-800 px-6 py-2  hover:bg-[#009C88] transition duration-300"
       >Conectar Ahora</a
     >
   </div>
@@ -347,7 +347,7 @@
   </p>
   <a
     href="#"
-    class="bg-yellow-400 text-gray-800 px-6 py-2  hover:bg-[#fbcc2c] transition duration-300"
+    class="bg-[#009C88] text-gray-800 px-6 py-2  hover:bg-[#009C88] transition duration-300"
     >Únete a la Comunidad</a
   >
 </div>
@@ -532,7 +532,7 @@
     <div class="bg-[#0c243c] bg-opacity-80 p-8  max-w-2xl mx-auto">
       <h2 class="text-4xl font-bold text-white mb-4">Explora la Industria 4.0</h2>
       <p class="text-gray-200 mb-6 text-lg">Accede a recursos exclusivos y conoce las últimas innovaciones.</p>
-      <a href="/buscador" routerLink="/buscador" class="bg-[#fbcc2c] text-gray-900 shadow-lg px-8 py-3  hover:bg-yellow-600 transition duration-300 inline-block">Explorar Recursos</a>
+      <a href="/buscador" routerLink="/buscador" class="bg-[#009C88] text-gray-900 shadow-lg px-8 py-3  hover:bg-[#009C88] transition duration-300 inline-block">Explorar Recursos</a>
     </div>
   </div>
 </div>
