--- a/src/app/v2/components/search-controls/search-controls.component.scss
+++ b/src/app/v2/components/search-controls/search-controls.component.scss
@@ -60,7 +60,7 @@
 .loading-spinner {
   width: 2rem;
   height: 2rem;
-  border: 2px solid #eab308;
+  border: 2px solid #009C88;
   border-radius: 50%;
   border-top-color: transparent;
   animation: spin 0.8s linear infinite;
