--- a/src/app/v2/components/supplier-item/supplier-item.component.html
+++ b/src/app/v2/components/supplier-item/supplier-item.component.html
@@ -3,7 +3,7 @@
   <h3 class="text-xl font-bold mb-2">{{ data?.nombreEmpresa }}</h3>
   @if (data?.recomendado) {
   <p class="text-md cards-title-color">
-    <span style="color: #eab308">&#9733;</span> <strong>Te recomendamos</strong>
+    <span style="color: #009C88">&#9733;</span> <strong>Te recomendamos</strong>
   </p>
   }
   <p style="text-align: left; font-size: 0.9rem">
@@ -36,7 +36,7 @@
   </a>
   @if (data?.recomendado) {
   <p class="text-md cards-title-color">
-    <span style="color: #eab308">&#9733;</span> <strong>Te recomendamos</strong>
+    <span style="color: #009C88">&#9733;</span> <strong>Te recomendamos</strong>
   </p>
   }
   <table style="text-align: left" class="mt-2">
