--- a/src/app/v2/modules/aviso-legal/aviso-legal.component.html
+++ b/src/app/v2/modules/aviso-legal/aviso-legal.component.html
@@ -5,7 +5,7 @@
 <main class="container mx-auto py-16 flex flex-col lg:flex-row">
   <!-- Sección de contenido principal -->
   <div class="w-full lg:w-3/4 pr-8 p-8">
-    <h1 class="text-4xl font-bold mb-12 border-b-2 border-[#fbcc2c] pb-4">Aviso Legal</h1>
+    <h1 class="text-4xl font-bold mb-12 border-b-2 border-[#009C88] pb-4">Aviso Legal</h1>
 
     <!-- Información General -->
     <section class="mb-12">
