--- a/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
+++ b/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
@@ -30,17 +30,17 @@
       <div class="w-1/3">
         @if (formacionEmprendedores()) {
         <button disabled (click)="openLink()"
-          class="w-full border-2 border-[#FBCC2C] p-8 bg-amber-50 text-gray-700 flex justify-between items-center">
+          class="w-full border-2 border-[#009C88] p-8 bg-amber-50 text-gray-700 flex justify-between items-center">
           Modelo de formación realizado
-          <svg class="w-5 h-5 text-[#FBCC2C]" fill="currentColor" viewBox="0 0 20 20">
+          <svg class="w-5 h-5 text-[#009C88]" fill="currentColor" viewBox="0 0 20 20">
             <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414L8.414 15 5 11.586a1 1 0 011.414-1.414L8.414 12.172l7.879-7.879a1 1 0 011.414 0z" clip-rule="evenodd"></path>
           </svg>
         </button>
         } @else {
         <button (click)="openLink()"
-          class="w-full border-2 border-[#FBCC2C] p-8 bg-amber-50 text-gray-700 hover:bg-amber-100 transition flex justify-between items-center">
+          class="w-full border-2 border-[#009C88] p-8 bg-amber-50 text-gray-700 hover:bg-amber-100 transition flex justify-between items-center">
           Realizar Modelo de Formación
-          <svg class="w-5 h-5 text-[#FBCC2C]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <svg class="w-5 h-5 text-[#009C88]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
           </svg>
         </button>
@@ -69,25 +69,25 @@
       <div class="w-1/3">
         @if (startup()) {
         <button disabled (click)="openLink()"
-          class="w-full border-2 border-[#FBCC2C] p-8 bg-amber-50 text-gray-700 flex justify-between items-center">
+          class="w-full border-2 border-[#009C88] p-8 bg-amber-50 text-gray-700 flex justify-between items-center">
           Modelo de Startup | Emprendimiento realizado
-          <svg class="w-5 h-5 text-[#FBCC2C]" fill="currentColor" viewBox="0 0 20 20">
+          <svg class="w-5 h-5 text-[#009C88]" fill="currentColor" viewBox="0 0 20 20">
             <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414L8.414 15 5 11.586a1 1 0 011.414-1.414L8.414 12.172l7.879-7.879a1 1 0 011.414 0z" clip-rule="evenodd"></path>
           </svg>
         </button>
         } @else {
         <div class="space-y-4">
           <button (click)="openLinkStartup()"
-            class="w-full border-2 border-[#FBCC2C] p-8 bg-amber-50 text-gray-700 hover:bg-amber-100 transition flex justify-between items-center">
+            class="w-full border-2 border-[#009C88] p-8 bg-amber-50 text-gray-700 hover:bg-amber-100 transition flex justify-between items-center">
             Realizar Modelo de Startup
-            <svg class="w-5 h-5 text-[#FBCC2C]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <svg class="w-5 h-5 text-[#009C88]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
             </svg>
           </button>
           <button (click)="openLinkEmprendimiento()"
-            class="w-full border-2 border-[#FBCC2C] p-8 bg-amber-50 text-gray-700 hover:bg-amber-100 transition flex justify-between items-center">
+            class="w-full border-2 border-[#009C88] p-8 bg-amber-50 text-gray-700 hover:bg-amber-100 transition flex justify-between items-center">
             Realizar Modelo de Emprendimiento
-            <svg class="w-5 h-5 text-[#FBCC2C]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <svg class="w-5 h-5 text-[#009C88]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
             </svg>
           </button>
