--- a/src/app/v2/modules/landing-page2/landing-page2.component.html
+++ b/src/app/v2/modules/landing-page2/landing-page2.component.html
@@ -58,7 +58,7 @@
       <!-- Beneficio 1 -->
       <div class="text-center">
         <!-- Ícono (ejemplo usando un emoji o ícono genérico; reemplazar con SVG propio) -->
-        <div class="text-[#EAB308] text-5xl mb-4">📘</div>
+        <div class="text-[#009C88] text-5xl mb-4">📘</div>
         <h3 class="text-xl font-bold mb-2 text-[rgb(31,41,55)]">
           Formación Continua
         </h3>
@@ -69,7 +69,7 @@
       </div>
       <!-- Beneficio 2 -->
       <div class="text-center">
-        <div class="text-[#EAB308] text-5xl mb-4">🌐</div>
+        <div class="text-[#009C88] text-5xl mb-4">🌐</div>
         <h3 class="text-xl font-bold mb-2 text-[rgb(31,41,55)]">
           Conexiones de Valor
         </h3>
@@ -80,7 +80,7 @@
       </div>
       <!-- Beneficio 3 -->
       <div class="text-center">
-        <div class="text-[#EAB308] text-5xl mb-4">🤝</div>
+        <div class="text-[#009C88] text-5xl mb-4">🤝</div>
         <h3 class="text-xl font-bold mb-2 text-[rgb(31,41,55)]">
           Asesoría Experta
         </h3>
@@ -109,7 +109,7 @@
 </section>
 
 <!-- Section podcasts-->
-<section class="bg-[#fbcc2c] py-10">
+<section class="bg-[#009C88] py-10">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex flex-col gap-12 lg:flex-row items-center">
       <div class="lg:w-1/2">
