--- a/src/app/v2/components/article-item/article-item.component.html
+++ b/src/app/v2/components/article-item/article-item.component.html
@@ -12,7 +12,7 @@
       <span class="bg-gray-100 text-gray-800 text-xs px-2 py-1 ">{{ resourceService.getPublicationYear(data?.fecha_publicacion) }}</span>
     }
     @if (data?.recomendado) {
-      <span class="bg-[#fbcc2c]  text-xs px-2 py-1">Recomendado</span>
+      <span class="bg-[#009C88]  text-xs px-2 py-1">Recomendado</span>
     }
   </div>
   
