--- a/src/app/v2/components/course-item/course-item.component.html
+++ b/src/app/v2/components/course-item/course-item.component.html
@@ -9,7 +9,7 @@
       <span class="bg-blue-100 text-blue-800 text-xs px-2 py-1 ">{{ data?.modalidad }}</span>
     }
     @if (data?.duracion) {
-      <span class="bg-yellow-100 text-yellow-800 text-xs px-2 py-1 ">{{ data?.duracion }}</span>
+      <span class="bg-yellow-100 text-[#009C88] text-xs px-2 py-1 ">{{ data?.duracion }}</span>
     }
   </div>
   
@@ -54,12 +54,12 @@
   <!-- Badge de recomendación con estilo mejorado -->
   @if (data?.recomendado) {
   <p class="text-md text-gray-700 pb-2 flex items-center">
-    <span class="text-[#fbcc2c] mr-1">
+    <span class="text-[#009C88] mr-1">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
         <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
       </svg>
     </span>
-    <strong class="text-yellow-600">Recomendado</strong>
+    <strong class="text-[#009C88]">Recomendado</strong>
   </p>
   }
   
