--- a/src/app/v2/components/search-controls/search-controls.component.html
+++ b/src/app/v2/components/search-controls/search-controls.component.html
@@ -27,7 +27,7 @@
     >
       <svg
         aria-hidden="true"
-        class="w-5 h-5 text-[#fbcc2c]"
+        class="w-5 h-5 text-[#009C88]"
         fill="currentColor"
         viewBox="0 0 20 20"
       >
@@ -45,7 +45,7 @@
       [(ngModel)]="searchInput"
       (ngModelChange)="onInputChange($event)"
       id="simple-search"
-      class="bg-white border border-gray-300 text-gray-800 text-base  shadow-sm focus:ring-2 focus:ring-[#fbcc2c] focus:border-[#fbcc2c] block w-full pl-10 p-3 transition-all duration-200"
+      class="bg-white border border-gray-300 text-gray-800 text-base  shadow-sm focus:ring-2 focus:ring-[#009C88] focus:border-[#009C88] block w-full pl-10 p-3 transition-all duration-200"
       [class.pr-10]="searchInput.trim().length > 0"
       placeholder="Buscar recursos..."
       required
@@ -78,7 +78,7 @@
   <button
     type="button"
     (click)="onSearch()"
-    class="p-3 ml-2 text-sm font-medium text-gray-800 bg-[#fbcc2c]  border-0 hover:bg-yellow-600 hover:shadow-md focus:ring-4 focus:ring-yellow-300 focus:outline-none transition-all duration-200 ease-in-out flex items-center justify-center min-w-[44px]"
+    class="p-3 ml-2 text-sm font-medium text-gray-800 bg-[#009C88]  border-0 hover:bg-[#009C88] hover:shadow-md focus:ring-4 focus:ring-[#009C88] focus:outline-none transition-all duration-200 ease-in-out flex items-center justify-center min-w-[44px]"
   >
     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
       <path
@@ -97,11 +97,11 @@
   <button
     *ngFor="let option of resourceOptions"
     (click)="onResourceTypeChange(option.type)"
-    [class.bg-[#fbcc2c]]="selectedResourceType === option.type"
+    [class.bg-[#009C88]]="selectedResourceType === option.type"
     [class.text-gray-800]="selectedResourceType === option.type"
     [class.shadow-md]="selectedResourceType === option.type"
-    [class.border-yellow-600]="selectedResourceType === option.type"
-    class="font-medium  px-4 py-2 text-sm border border-gray-300 hover:bg-[#fbcc2c] hover:text-gray-800 hover:shadow-md transition-all duration-200 ease-in-out"
+    [class.border-[#009C88]]="selectedResourceType === option.type"
+    class="font-medium  px-4 py-2 text-sm border border-gray-300 hover:bg-[#009C88] hover:text-gray-800 hover:shadow-md transition-all duration-200 ease-in-out"
   >
     {{ option.label }}
   </button>
