--- a/src/app/v2/components/sugeridos/sugeridos.component.html
+++ b/src/app/v2/components/sugeridos/sugeridos.component.html
@@ -7,7 +7,7 @@
 <div class="bg-white ">
   <!-- Header con estilo mejorado -->
   <h2 class="py-4 px-8 text-2xl font-bold   flex items-center">
-    <span class="mr-2 text-[#fbcc2c]">
+    <span class="mr-2 text-[#009C88]">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z" />
       </svg>
@@ -45,7 +45,7 @@
       <!-- Proveedores: tienen 'nombreEmpresa' y (rut_md5 o correoElectronicoEmpresa) -->
       <ng-container *ngIf="item?.nombreEmpresa && (item?.rut_md5 || item?.correoElectronicoEmpresa)">
         <app-supplier-item 
-          class="block bg-gray-50 border-2 border-gray-800 shadow-sm hover:shadow-md transition-all duration-300 transform hover:-translate-y-1 border-l-4 border-[#fbcc2c]" 
+          class="block bg-gray-50 border-2 border-gray-800 shadow-sm hover:shadow-md transition-all duration-300 transform hover:-translate-y-1 border-l-4 border-[#009C88]" 
           [simplified]="true" 
           [data]="item" 
           (openModal)="openModal(i)">
@@ -55,7 +55,7 @@
       <!-- Financiamiento: tienen 'porcentaje_cobertura' -->
       <ng-container *ngIf="item?.porcentaje_cobertura">
         <app-financing-item 
-          class="block bg-gray-50 border-2 border-gray-800 shadow-sm hover:shadow-md transition-all duration-300 transform hover:-translate-y-1 border-l-4 border-[#fbcc2c]" 
+          class="block bg-gray-50 border-2 border-gray-800 shadow-sm hover:shadow-md transition-all duration-300 transform hover:-translate-y-1 border-l-4 border-[#009C88]" 
           [simplified]="true" 
           [data]="item" 
           (openModal)="openModal(i)">
@@ -85,7 +85,7 @@
       <!-- Startups: tienen 'descripcionStartup' -->
       <ng-container *ngIf="item?.descripcionStartup">
         <app-startup-item 
-          class="block bg-gray-50 border-2 border-gray-800 shadow-sm hover:shadow-md transition-all duration-300 transform hover:-translate-y-1 border-l-4 border-[#fbcc2c]" 
+          class="block bg-gray-50 border-2 border-gray-800 shadow-sm hover:shadow-md transition-all duration-300 transform hover:-translate-y-1 border-l-4 border-[#009C88]" 
           [simplified]="true" 
           [data]="item" 
           (openModal)="openModal(i)">
