--- a/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
+++ b/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
@@ -66,7 +66,7 @@
             </div>
           } @else {
             <div class="space-y-4">
-              <div class="p-4 bg-yellow-50 border-l-4 border-yellow-400 ">
+              <div class="p-4 bg-yellow-50 border-l-4 border-[#009C88] ">
                 <!-- Mostrar mensaje de evaluación en proceso -->
                 <p class="text-gray-700 font-semibold mb-2">Tu evaluación está en proceso</p>
                 <ul class="list-disc ml-5 space-y-1 text-gray-600">
@@ -113,7 +113,7 @@
                     </svg>
                     <span class="text-gray-600">Completado</span>
                   } @else {
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#fbcc2c] mr-1" viewBox="0 0 20 20" fill="currentColor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#009C88] mr-1" viewBox="0 0 20 20" fill="currentColor">
                       <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
                     </svg>
                     <span class="text-blue-700">Pendiente de completar</span>
@@ -152,7 +152,7 @@
                     </svg>
                     <span class="text-gray-600">Completado</span>
                   } @else {
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#fbcc2c] mr-1" viewBox="0 0 20 20" fill="currentColor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#009C88] mr-1" viewBox="0 0 20 20" fill="currentColor">
                       <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
                     </svg>
                     <span class="text-blue-700">Pendiente de completar</span>
@@ -193,7 +193,7 @@
                     </svg>
                     <span class="text-gray-600">Completado</span>
                   } @else {
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#fbcc2c] mr-1" viewBox="0 0 20 20" fill="currentColor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#009C88] mr-1" viewBox="0 0 20 20" fill="currentColor">
                       <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
                     </svg>
                     <span class="text-blue-700">Pendiente de completar</span>
@@ -232,7 +232,7 @@
                     </svg>
                     <span class="text-gray-600">Completado</span>
                   } @else {
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#fbcc2c] mr-1" viewBox="0 0 20 20" fill="currentColor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-[#009C88] mr-1" viewBox="0 0 20 20" fill="currentColor">
                       <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
                     </svg>
                     <span class="text-blue-700">Pendiente de completar</span>
@@ -305,7 +305,7 @@
       </div>
 
       <!-- New scale explanation -->
-      <div class="bg-[#EAB308] py-5 px-6 mb-8">
+      <div class="bg-[#009C88] py-5 px-6 mb-8">
         <h2 class="text-2xl font-bold text-white flex items-center">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd" />
@@ -484,7 +484,7 @@
                   <ng-container *ngTemplateOutlet="gradeBoxes; context: {grade: numeroALetra(this.modeloMadurez()?.puntaje_por_categoria?.gestion_de_la_innovacion_y_conocimiento)}"></ng-container>
                 </span>
               </div>
-              <div class="pl-3 border-l-4 border-[#fbcc2c]">
+              <div class="pl-3 border-l-4 border-[#009C88]">
                 <p class="text-gray-700 font-medium mb-2">
                   {{
                     innovacionSections[
@@ -545,7 +545,7 @@
         </div>
       </div>
       
-      <div class="bg-[#EAB308] py-5 px-6 mb-8">
+      <div class="bg-[#009C88] py-5 px-6 mb-8">
         <h2 class="text-2xl font-bold text-white flex items-center">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 mr-3" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd" />
