--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -17,7 +17,7 @@
 <!--Section registro-->
 <app-selection-register></app-selection-register>
 <!-- Section podcasts-->
-<section class="bg-gradient-to-br from-[#fbcc2c]/90 to-yellow-400/80 py-16">
+<section class="bg-gradient-to-br from-[#009C88]/90 to-[#009C88]/80 py-16">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex flex-col gap-12 lg:flex-row items-center">
       <div class="lg:w-1/2">
@@ -57,7 +57,7 @@
       <!-- Sección de título y descripción -->
       <div class="lg:text-center mb-16">
         <h2
-          class="font-heading mb-4 bg-gradient-to-r from-[#fbcc2c] to-yellow-400 inline-block px-6 py-2  text-sm font-medium tracking-wider text-gray-900 uppercase"
+          class="font-heading mb-4 bg-gradient-to-r from-[#009C88] to-[#009C88] inline-block px-6 py-2  text-sm font-medium tracking-wider text-gray-900 uppercase"
         >
           ¿Qué es Nuevo los lagos?
         </h2>
@@ -78,8 +78,8 @@
         <dl class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
           <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-[#fbcc2c]/10 p-3 ">
-                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#009C88]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#009C88]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
@@ -92,8 +92,8 @@
           </div>
           <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-[#fbcc2c]/10 p-3 ">
-                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#009C88]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#009C88]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
@@ -106,8 +106,8 @@
           </div>
           <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-[#fbcc2c]/10 p-3 ">
-                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#009C88]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#009C88]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
@@ -120,8 +120,8 @@
           </div>
           <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-[#fbcc2c]/10 p-3 ">
-                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#009C88]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#009C88]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
@@ -134,8 +134,8 @@
           </div>
           <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-[#fbcc2c]/10 p-3 ">
-                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#009C88]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#009C88]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
@@ -150,8 +150,8 @@
           </div>
           <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-[#fbcc2c]/10 p-3 ">
-                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#009C88]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#009C88]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
